--- a/about.html
+++ b/about.html
@@ -97,10 +97,10 @@
       <li class="has-submenu" id="servicesMenuItem">
         <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
         <ul>
-          <li><a href="/about/team.html">Molasses bulk Transport</a></li>
-          <li><a href="/about/history.html">Pan-India Operations</a></li>
-          <li><a href="/about/history.html">Safe and Secure</a></li>
-          <li><a href="/about/history.html">GPS tracking system</a></li>
+          <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
+          <li><a href="/pan-india.html">Pan-India Operations</a></li>
+          <li><a href="/safe&secure.html">Safe and Secure</a></li>
+          <li><a href="/gps-tracking.html">GPS tracking system</a></li>
         </ul>
       </li>
       <li class="has-submenu" id="fleetMenuItem">
