--- a/gps-tracking.html
+++ b/gps-tracking.html
@@ -98,10 +98,10 @@
             <li class="has-submenu" id="servicesMenuItem">
                 <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/about/team.html">Molasses bulk Transport</a></li>
-                    <li><a href="/about/history.html">Pan-India Operations</a></li>
-                    <li><a href="/about/history.html">Safe and Secure</a></li>
-                    <li><a href="/about/history.html">GPS tracking system</a></li>
+                    <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
+                    <li><a href="/pan-india.html">Pan-India Operations</a></li>
+                    <li><a href="/safe&secure.html">Safe and Secure</a></li>
+                    <li><a href="/gps-tracking.html">GPS tracking system</a></li>
                 </ul>
             </li>
             <li class="has-submenu" id="fleetMenuItem">
@@ -243,7 +243,7 @@
                 </div>
                 <h3 class="feature-title-item">Fuel & Speed Monitoring:</h3>
                 <p class="feature-description-item">
-                     Reduce wastage and ensure safe driving practices.
+                    Reduce wastage and ensure safe driving practices.
                 </p>
             </div>
         </div>
@@ -254,7 +254,9 @@
     <section class="safety-charter-section">
         <div class="safety-container">
             <h2 class="safety-section-title">How Our GPS Tracking System Works</h2>
-            <p style="font-size: 1.2rem;">Our vehicles are fitted with industry-grade GPS devices, connected to a centralized dashboard managed by our dispatch and support teams. Clients are given secure access portals or reports to track critical shipment data.</p>
+            <p style="font-size: 1.2rem;">Our vehicles are fitted with industry-grade GPS devices, connected to a
+                centralized dashboard managed by our dispatch and support teams. Clients are given secure access portals
+                or reports to track critical shipment data.</p>
 
             <p>Our Technology Covers:</p>
 
