--- a/molasses-bulk.html
+++ b/molasses-bulk.html
@@ -98,10 +98,10 @@
             <li class="has-submenu" id="servicesMenuItem">
                 <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/about/team.html">Molasses bulk Transport</a></li>
-                    <li><a href="/about/history.html">Pan-India Operations</a></li>
-                    <li><a href="/about/history.html">Safe and Secure</a></li>
-                    <li><a href="/about/history.html">GPS tracking system</a></li>
+                    <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
+                    <li><a href="/pan-india.html">Pan-India Operations</a></li>
+                    <li><a href="/safe&secure.html">Safe and Secure</a></li>
+                    <li><a href="/gps-tracking.html">GPS tracking system</a></li>
                 </ul>
             </li>
             <li class="has-submenu" id="fleetMenuItem">
@@ -244,8 +244,9 @@
                 <p class="feature-description-item">
                     From sourcing to final delivery, our logistics experts manage every step, including:
                 </p>
-                <div class="feature-description-item-list" style="display: flex; flex-wrap: wrap; gap: 1px 10px; margin-top: 0;">
-                    <li >Route planning</li>
+                <div class="feature-description-item-list"
+                    style="display: flex; flex-wrap: wrap; gap: 1px 10px; margin-top: 0;">
+                    <li>Route planning</li>
                     <li>Vehicle tracking</li>
                     <li>Compliance documentation</li>
                     <li>Timely updates to clients</li>
@@ -256,7 +257,7 @@
 
 
 
-        <section class="safety-charter-section">
+    <section class="safety-charter-section">
         <div class="safety-container">
             <h2 class="safety-section-title">Safety, Compliance & Quality First</h2>
 
@@ -316,7 +317,8 @@
         <div class="why-choose-container">
             <!-- Left Image -->
             <div class="why-choose-image">
-                <img src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg" alt="Smiling Passenger" />
+                <img src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg"
+                    alt="Smiling Passenger" />
             </div>
 
             <!-- Right Content -->
@@ -332,7 +334,7 @@
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Serving All India</h4>
 
                     </div>
-                    <div class="why-choose-feature3" >
+                    <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">On-Time, Every Time</h4>
 
@@ -344,14 +346,15 @@
                     </div>
                 </div>
                 <div class="why-choose-box" style="margin-top: 20px;">
-                     <div class="why-choose-feature3">
+                    <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Real-Time Tracking & Support</h4>
 
                     </div>
                     <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
-                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Trusted by Leading Sugar Mills & Distilleries</h4>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Trusted by Leading Sugar Mills &
+                            Distilleries</h4>
                     </div>
                 </div>
             </div>
