--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                                             <a style="font-size: 24px;">Services <i
                                                     class="fa-solid fa-angle-down"></i></a>
                                             <ul class="tt-ol-submenu">
-                                                <li><a href="/about/team.html">Molasses bulk Transport</a></li>
-                                                <li><a href="/about/history.html">Pan-India Operations</a></li>
-                                                <li><a href="/about/history.html">Safe and Secure</a></li>
-                                                <li><a href="/about/history.html">GPS tracking system</a></li>
+                                                <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
+                                                <li><a href="/pan-india.html">Pan-India Operations</a></li>
+                                                <li><a href="/safe&secure.html">Safe and Secure</a></li>
+                                                <li><a href="/gps-tracking.html">GPS tracking system</a></li>
                                             </ul>
                                         </div>
                                     </li>
