--- a/gps-tracking.html
+++ b/gps-tracking.html
@@ -206,14 +206,14 @@
             </div>
 
             <!-- Feature Item 2: Management & Reporting -->
-            <div class="feature-item">
+            <!-- <div class="feature-item">
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=📈" alt="Chart icon">
                 </div>
                 <h3 class="feature-title-item"> Estimated Time of Arrival (ETA): </h3>
                 <p class="feature-description-item">
                     Accurate delivery forecasting, updated in real time.</p>
-            </div>
+            </div> -->
 
             <!-- Feature Item 3: Freight Payment Options -->
             <div class="feature-item">
@@ -307,7 +307,7 @@
 
             </div>
         </div>
-        <hr style="margin-top: 40px;">
+        <!-- <hr style="margin-top: 40px;"> -->
     </section>
 
     <section class="quality-works-section">
