--- a/molasses-bulk.html
+++ b/molasses-bulk.html
@@ -316,10 +316,10 @@
     <section class="why-choose-section">
         <div class="why-choose-container">
             <!-- Left Image -->
-            <div class="why-choose-image">
+            <!-- <div class="why-choose-image">
                 <img src="https://cdn.pixabay.com/photo/2023/03/15/03/46/jeep-7853620_1280.jpg"
                     alt="Smiling Passenger" />
-            </div>
+            </div> -->
 
             <!-- Right Content -->
             <div class="why-choose-content">
@@ -344,9 +344,7 @@
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Specialized in Liquid Cargo</h4>
 
                     </div>
-                </div>
-                <div class="why-choose-box" style="margin-top: 20px;">
-                    <div class="why-choose-feature3">
+                     <div class="why-choose-feature3">
                         <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Real-Time Tracking & Support</h4>
 
@@ -357,6 +355,18 @@
                             Distilleries</h4>
                     </div>
                 </div>
+                <!-- <div class="why-choose-box" style="margin-top: 20px;">
+                    <div class="why-choose-feature3">
+                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Real-Time Tracking & Support</h4>
+
+                    </div>
+                    <div class="why-choose-feature3">
+                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Trusted by Leading Sugar Mills &
+                            Distilleries</h4>
+                    </div>
+                </div> -->
             </div>
         </div>
     </section>
