--- a/safe&secure.html
+++ b/safe&secure.html
@@ -213,7 +213,7 @@
             </div>
 
             <!-- Feature Item 3: Freight Payment Options -->
-            <div class="feature-item">
+            <!-- <div class="feature-item">
                 <div class="feature-icon-wrapper">
                     <img src="https://placehold.co/30x30/ffc107/fff?text=💳" alt="Card icon">
                 </div>
@@ -222,7 +222,7 @@
                     We ensure conditions are controlled to prevent fermentation or spoilage of molasses.
 
                 </p>
-            </div>
+            </div> -->
 
             <!-- Feature Item 4: Compliance Solutions -->
             <div class="feature-item">
@@ -306,63 +306,48 @@
                 legalities or disruptions.</p>
         </div>
 
-        <hr style="margin: 40px 0;">
+        <!-- <hr style="margin: 40px 0;"> -->
+        <!-- <hr style="margin-top: 40px;"> -->
+    </section>
 
-
-        <div class="safety-container">
-            <h2 class="safety-section-title">Driver Safety & Training Program</h2>
-            <p style="font-size: 1.2rem;">Our drivers are the backbone of our operations — and we ensure they’re
+    <section class="freight-forwarder-section">
+        <div class="container">
+            <h2 class="section-title">Driver Safety & Training Program</h2>
+            <p style="font-size: 1.5rem;">Our drivers are the backbone of our operations — and we ensure they’re
                 well-prepared:</p>
 
-            <div class="safety-features-grid">
-                <!-- Card 1 -->
-                <div class="safety-feature-card">
-                    <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🚌" alt="Bus icon" />
-                    </div>
-                    <h3 class="safety-feature-title-card"> Trained in chemical transport safety and liquid handling</h3>
-                    <!-- <p class="safety-feature-description-card">
-                        Compliant with Excise, Pollution, and Food Safety norms
-                    </p> -->
+            <div class="industries-grid">
+                <!-- Card 1: Automotive -->
+                <div class="industry-card">
+                    <span class="industry-icon"><img src="" alt="logo"></span>
+                    <h3 class="industry-title">Trained in chemical transport safety and liquid handling</h3>
                 </div>
 
-                <!-- Card 2 -->
-                <div class="safety-feature-card">
-                    <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🛄" alt="Luggage icon" />
-                    </div>
-                    <h3 class="safety-feature-title-card">Certified in fire safety and emergency control</h3>
-                    <!-- <p class="safety-feature-description-card">
-                        All operators are trained in handling liquid and hazardous cargo
-                    </p> -->
+                <!-- Card 2: Technology (Highlighted) -->
+                <div class="industry-card highlighted">
+                    <span class="industry-icon"><img src="" alt="logo"></span>
+                    <h3 class="industry-title">Certified in fire safety and emergency control</h3>
+                    <!-- <p class="industry-description">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p> -->
                 </div>
 
-                <!-- Card 3 -->
-                <div class="safety-feature-card">
-                    <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=💒" alt="Church icon" />
-                    </div>
-                    <h3 class="safety-feature-title-card"> Regular health and sobriety checks</h3>
-                    <!-- <p class="safety-feature-description-card">
-                        Regular cleaning and quality checks before each shipment
-                    </p> -->
+                <!-- Card 3: Healthcare -->
+                <div class="industry-card">
+                    <span class="industry-icon"><img src="" alt="logo"></span> 
+                    <h3 class="industry-title">Regular health and sobriety checks</h3>
+                    <!-- <p class="industry-description">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p> -->
                 </div>
 
-                <!-- Card 4 -->
-                <div class="safety-feature-card">
-                    <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🎒" alt="Backpack icon" />
-                    </div>
-                    <h3 class="safety-feature-title-card"> Equipped with PPE and emergency toolkits</h3>
-                    <!-- <p class="safety-feature-description-card">
-                        We ensure molasses is transported under optimum conditions to avoid fermentation or spoilage
-                    </p> -->
+                <!-- Card 4: Renewable Energy -->
+                <div class="industry-card">
+                    <span class="industry-icon"><img src="" alt="logo"></span>
+                    <h3 class="industry-title">Equipped with PPE and emergency toolkits</h3>
+                    <!-- <p class="industry-description">Lorem ipsum dolor sit amet consectetur adipiscing elit dolor</p> -->
                 </div>
-
             </div>
-            <p style="font-size: 1.1rem; margin-top: 30px;">We believe safe transport begins with safe people.</p>
         </div>
-        <hr style="margin-top: 40px;">
+        <p style="font-size: 1.2rem; margin-top: 40px;">We believe safe transport begins with safe people.
+
+        </p>
     </section>
 
     <section class="quality-works-section">
