--- a/about.html
+++ b/about.html
@@ -90,39 +90,37 @@
   </nav>
 
   <!-- Full-screen Overlay Navigation Menu -->
-  <div class="overlay-menu" id="overlayMenu">
-    <ul class="overlay-menu-content" id="overlayMenuContent">
-      <li><span>01</span><a href="/index.html">HOME</a></li>
-      <li><span>02</span><a href="/about.html">ABOUT US</a></li>
-      <li class="has-submenu" id="servicesMenuItem">
-        <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
-        <ul>
-          <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
-          <li><a href="/pan-india.html">Pan-India Operations</a></li>
-          <li><a href="/safe&secure.html">Safe and Secure</a></li>
-          <li><a href="/gps-tracking.html">GPS tracking system</a></li>
+   <div class="overlay-menu" id="overlayMenu">
+        <ul class="overlay-menu-content" id="overlayMenuContent">
+            <li><span>01</span><a href="/index.html">HOME</a></li>
+            <li><span>02</span><a href="/about.html">ABOUT US</a></li>
+            <li class="has-submenu" id="servicesMenuItem">
+                <span>03</span><a href="#">SERVICES <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                    <li><a href="/molasses-bulk.html">Molasses bulk Transport</a></li>
+                    <li><a href="/pan-india.html">Pan-India Operations</a></li>
+                    <li><a href="/safe&secure.html">Safe and Secure</a></li>
+                    <li><a href="/gps-tracking.html">GPS tracking system</a></li>
+                </ul>
+            </li>
+            <li class="has-submenu" id="fleetMenuItem">
+                <span>04</span><a href="#">FLEET <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                    <li><a href="/typesOfVehicles.html">Types of Vehicles</a></li>
+                    <li><a href="/maintenance&cleanliness.html">Maintenance & Cleanliness Protocol</a></li>
+                </ul>
+            </li>
+            <li class="has-submenu" id="industriesMenuItem">
+                <span>05</span><a href="#">INDUSTRIES SERVED <i class="fa-solid fa-angle-down"></i></a>
+                <ul>
+                    <li><a href="/sugarFactories.html">Sugar Factories</a></li>
+                    <li><a href="/distilleries.html">Distilleries</a></li>
+                </ul>
+            </li>
+            <li><span>06</span><a href="/gallery.html">GALLERY</a></li>
+            <li><span>08</span><a href="/contact.html">CONTACT US</a></li>
         </ul>
-      </li>
-      <li class="has-submenu" id="fleetMenuItem">
-        <span>04</span><a href="#">FLEET <i class="fa-solid fa-angle-down"></i></a>
-        <ul>
-          <li><a href="/about/team.html">Types of Vehicles</a></li>
-          <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a></li>
-        </ul>
-      </li>
-      <li class="has-submenu" id="industriesMenuItem">
-        <span>05</span><a href="#">INDUSTRIES SERVED <i class="fa-solid fa-angle-down"></i></a>
-        <ul>
-          <li><a href="/about/team.html">Sugar Factories</a></li>
-          <li><a href="/about/history.html">Distilleries</a></li>
-          <li><a href="/about/history.html">Biofuel & Chemical Units</a></li>
-        </ul>
-      </li>
-      <li><span>06</span><a href="/gallery.html">GALLERY</a></li>
-      <li><span>07</span><a href="#">TESTIMONIALS</a></li>
-      <li><span>08</span><a href="#">CONTACT US</a></li>
-    </ul>
-  </div>
+    </div>
   <!----------- Start Footer Sections ---------------->
 
   <!-- Hero Section -->
