--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
                                         <div class="tt-ol-submenu-trigger">
                                             <a style="font-size: 24px;">Fleet <i class="fa-solid fa-angle-down"></i></a>
                                             <ul class="tt-ol-submenu">
-                                                <li><a href="/about/team.html">Types of Vehicles</a></li>
-                                                <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a>
+                                                <li><a href="/typesOfVehicles.html">Types of Vehicles</a></li>
+                                                <li><a href="/maintenance&cleanliness.html">Maintenance & Cleanliness Protocol</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -202,9 +202,8 @@
                                             <a style="font-size: 24px;">Industries Served <i
                                                     class="fa-solid fa-angle-down"></i></a>
                                             <ul class="tt-ol-submenu">
-                                                <li><a href="/about/team.html">Sugar Factories</a></li>
-                                                <li><a href="/about/history.html">Distilleries</a></li>
-                                                <li><a href="/about/history.html">Biofuel & Chemical Units</a></li>
+                                                <li><a href="/sugarFactories.html">Sugar Factories</a></li>
+                                                <li><a href="/distilleries.html">Distilleries</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -214,11 +213,6 @@
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
                                             <a style="font-size: 24px;" href="/gallery.html">Gallery</a>
-                                        </div>
-                                    </li>
-                                    <li class="tt-ol-submenu-wrap">
-                                        <div class="tt-ol-submenu-trigger">
-                                            <a style="font-size: 24px;" href="">Testimonials</a>
                                         </div>
                                     </li>
                                     <li><a style="font-size: 24px;" href="/contact.html">Contact US</a></li>
