--- a/pan-india.html
+++ b/pan-india.html
@@ -107,21 +107,19 @@
             <li class="has-submenu" id="fleetMenuItem">
                 <span>04</span><a href="#">FLEET <i class="fa-solid fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/about/team.html">Types of Vehicles</a></li>
-                    <li><a href="/about/history.html">Maintenance & Cleanliness Protocol</a></li>
+                    <li><a href="/typesOfVehicles.html">Types of Vehicles</a></li>
+                    <li><a href="/maintenance&cleanliness.html">Maintenance & Cleanliness Protocol</a></li>
                 </ul>
             </li>
             <li class="has-submenu" id="industriesMenuItem">
                 <span>05</span><a href="#">INDUSTRIES SERVED <i class="fa-solid fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/about/team.html">Sugar Factories</a></li>
-                    <li><a href="/about/history.html">Distilleries</a></li>
-                    <li><a href="/about/history.html">Biofuel & Chemical Units</a></li>
+                    <li><a href="/sugarFactories.html">Sugar Factories</a></li>
+                    <li><a href="/distilleries.html">Distilleries</a></li>
                 </ul>
             </li>
             <li><span>06</span><a href="/gallery.html">GALLERY</a></li>
-            <li><span>07</span><a href="#">TESTIMONIALS</a></li>
-            <li><span>08</span><a href="#">CONTACT US</a></li>
+            <li><span>08</span><a href="/contact.html">CONTACT US</a></li>
         </ul>
     </div>
     <!----------- Start Footer Sections ---------------->
