--- a/molasses-bulk.html
+++ b/molasses-bulk.html
@@ -200,7 +200,7 @@
             <!-- Feature Item 1: Customer Satisfaction Tools -->
             <div class="feature-item">
                 <div class="feature-icon-wrapper">
-                    <img src="https://placehold.co/30x30/ffc107/fff?text=⚙️" alt="Gear icon">
+                    <img src="/images/icons/tanker.png" alt="Gear icon">
                 </div>
                 <h3 class="feature-title-item">Bulk Molasses Tanker Transport</h3>
                 <p class="feature-description-item">
@@ -212,7 +212,7 @@
             <!-- Feature Item 2: Management & Reporting -->
             <div class="feature-item">
                 <div class="feature-icon-wrapper">
-                    <img src="https://placehold.co/30x30/ffc107/fff?text=📈" alt="Chart icon">
+                    <img src="/images/icons/india.png" alt="Chart icon">
                 </div>
                 <h3 class="feature-title-item"> PAN-India Delivery Network</h3>
                 <p class="feature-description-item">
@@ -236,7 +236,7 @@
             <!-- Feature Item 4: Compliance Solutions -->
             <div class="feature-item">
                 <div class="feature-icon-wrapper">
-                    <img src="https://placehold.co/30x30/ffc107/fff?text=✅" alt="Checkmark icon">
+                    <img src="/images/icons/supply-chain.png" alt="Checkmark icon">
                 </div>
                 <h3 class="feature-title-item">End-to-End Logistics Coordination</h3>
                 <p class="feature-description-item">
@@ -263,7 +263,7 @@
                 <!-- Card 1 -->
                 <div class="safety-feature-card">
                     <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🚌" alt="Bus icon" />
+                        <img src="images/icons/certificate.png" alt="Bus icon" />
                     </div>
                     <h3 class="safety-feature-title-card">Fully Licensed & Regulated Transport</h3>
                     <p class="safety-feature-description-card">
@@ -274,7 +274,7 @@
                 <!-- Card 2 -->
                 <div class="safety-feature-card">
                     <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🛄" alt="Luggage icon" />
+                        <img src="/images/icons/driver.png" alt="Luggage icon" />
                     </div>
                     <h3 class="safety-feature-title-card">Driver Training & Safety Protocols</h3>
                     <p class="safety-feature-description-card">
@@ -285,7 +285,7 @@
                 <!-- Card 3 -->
                 <div class="safety-feature-card">
                     <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=💒" alt="Church icon" />
+                        <img src="/images/icons/tanker.png" alt="Church icon" />
                     </div>
                     <h3 class="safety-feature-title-card">Tanker Hygiene</h3>
                     <p class="safety-feature-description-card">
@@ -296,7 +296,7 @@
                 <!-- Card 4 -->
                 <div class="safety-feature-card">
                     <div class="safety-feature-icon">
-                        <img src="https://placehold.co/35x35/ffffff/000?text=🎒" alt="Backpack icon" />
+                        <img src="/images/icons/thermometer.png" alt="Backpack icon" />
                     </div>
                     <h3 class="safety-feature-title-card">Temperature Control</h3>
                     <p class="safety-feature-description-card">
@@ -333,22 +333,22 @@
 
                     </div>
                     <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div class="why-choose-icon"><i class="fa-solid fa-clock"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">On-Time, Every Time</h4>
 
                     </div>
                     <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div class="why-choose-icon"><i class="fa-solid fa-water"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Specialized in Liquid Cargo</h4>
 
                     </div>
                      <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div class="why-choose-icon"><i class="fa-solid fa-map-location-dot"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Real-Time Tracking & Support</h4>
 
                     </div>
                     <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div class="why-choose-icon"><i class="fa-solid fa-cubes-stacked"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;">Trusted by Leading Sugar Mills &
                             Distilleries</h4>
                     </div>
