--- a/pan-india.html
+++ b/pan-india.html
@@ -337,7 +337,7 @@
                 <!-- Feature Box -->
                 <div class="why-choose-box">
                     <div class="why-choose-feature3">
-                        <div class="why-choose-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div class="why-choose-icon"><i class="fa-solid fa-map-location-dot"></i></div>
                         <h4 style="color: #fff; font-size: 1.1rem; font-weight: 700;"> Live vehicle tracking</h4>
 
                     </div>
