--- a/distilleries.html
+++ b/distilleries.html
@@ -127,14 +127,14 @@
 
     <!-- Hero Section -->
     <div class="about-section">
-        <h1 style="color: #fff;">Types of Vehicles</h1>
+        <h1 style="color: #fff;">Distilleries</h1>
     </div>
 
     <!-- Slant Shape -->
     <div class="slant">
         <a href="/index.html">Home</a>
         <span>&raquo;</span>
-        <span>INDUSTRIES SERVED</span>
+        <span>Industry Served</span>
         <span>&raquo;</span>
         <span>Distilleries</span>
 
