--- a/distilleries.html
+++ b/distilleries.html
@@ -317,7 +317,7 @@
         <img src="https://cdn.pixabay.com/photo/2016/11/21/16/37/loader-1846346_1280.jpg" alt="Ships in port at night"
             class="client-trust-background-image">
         <div class="client-trust-image-overlay">
-            <p class="client-trust-subtitle">Cleanliness & Maintenance Protocol</p>
+            <p class="client-trust-subtitle" style="padding-top: 50px;">Cleanliness & Maintenance Protocol</p>
             <p class="client-trust-text">
                 Every tanker used for distillery transport undergoes routine internal and external cleaning, especially
                 when switching between different liquid products. Our maintenance and sanitization protocols ensure that
