--- a/sugarFactories.html
+++ b/sugarFactories.html
@@ -161,12 +161,62 @@
             </p>
             <!-- <a href="#" class="learn-more-button">Learn More About Our Services</a> -->
 
-             <h2 class="main-title2" style="margin-top: 40px;"><span>🌾</span> Why Sugar Factories Trust Alaknanda Transport</h2>
-             <p class="description-paragraph2">
-                The sugar industry operates on tight seasonal schedules, demanding precise logistics support. Alaknanda Transport understands these complexities and delivers customized solutions that align with your production and distribution timelines.
+            <h2 class="main-title2" style="margin-top: 40px;"><span>🌾</span> Why Sugar Factories Trust Alaknanda
+                Transport</h2>
+            <p class="description-paragraph2">
+                The sugar industry operates on tight seasonal schedules, demanding precise logistics support. Alaknanda
+                Transport understands these complexities and delivers customized solutions that align with your
+                production and distribution timelines.
             </p>
         </div>
     </section>
+
+
+
+    <div class="serve-container">
+        <div class="serve-section-header">
+            <h2>We serve sugar factories with:</h2>
+        </div>
+
+        <div class="serve-services-grid">
+            <div class="serve-service-item">
+                <div class="serve-icon-box">
+                    <i class="fa-solid fa-truck-field"></i>
+                </div>
+                <h3 class="serve-service-title">Tanker Transport for Molasses & Ethanol</h3>
+            </div>
+
+            <div class="serve-service-item">
+                <div class="serve-icon-box">
+                    <i class="fas fa-leaf"></i>
+                </div>
+                <h3 class="serve-service-title">Bulk Transport of Sugarcane By-Products (Bagasse, Pressmud)</h3>
+            </div>
+
+            <div class="serve-service-item">
+                <div class="serve-icon-box">
+                    <i class="fas fa-box-open"></i>
+                </div>
+                <h3 class="serve-service-title">Refined Sugar Logistics</h3>
+            </div>
+
+            <div class="serve-service-item">
+                <div class="serve-icon-box">
+                    <i class="fas fa-map-marked-alt"></i>
+                </div>
+                <h3 class="serve-service-title">On-Time Delivery Across PAN India</h3>
+            </div>
+
+            <div class="serve-service-item">
+                <div class="serve-icon-box">
+                    <i class="fas fa-shield-alt"></i>
+                </div>
+                <h3 class="serve-service-title">Regulatory-Compliant & GPS-Tracked Vehicles</h3>
+            </div>
+        </div>
+    </div>
+
+
 
 
     <div class="sugar-service-section">
@@ -255,6 +305,29 @@
 
 
 
+
+    <div class="mission-main-container" style="margin: 50px 20px; width: auto;">
+        <!-- Left Content Column -->
+        <div class="mission-content-column">
+            <h2>Serving Sugar Belts Across India</h2>
+            <p>From Uttar Pradesh and Maharashtra to Karnataka, Tamil Nadu, and Gujarat, we support India’s major
+                sugar-producing states with scalable transport capacity and round-the-clock dispatch support.</p>
+            <!-- <h2>Our Mission</h2> -->
+            <div class="vision-buttons">
+                <p>Whether you're a co-operative sugar mill, a private refinery, or an ethanol blending unit, Alaknanda
+                    Transport is ready to be your reliable logistics backbone.</p>
+            </div>
+        </div>
+
+        <!-- Right Image Column -->
+        <!-- <div class="image-column-line"> -->
+        <div class="image-column">
+            <img src="https://cdn.pixabay.com/photo/2016/11/21/14/03/woman-1845572_1280.jpg" alt="Team Photo">
+        </div>
+        <!-- </div> -->
+    </div>
+
+    </section>
 
 
 
