--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@
                                                 <span class="footer-widget__info__icon">
                                                    <i class="fa-solid fa-envelope"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
-                                                <a href="alaknandatransport@gmail.com">alaknandatransport@gmail.com</a>
+                                                <a href="mailto:alaknandatransport@gmail.com">alaknandatransport@gmail.com</a>
                                             </li>
                                             <li>
                                                 <span class="footer-widget__info__icon">
